[tool.poetry]
name = "homeprovisioner"
version = "0.1.8"
description = ""
authors = ["Jóhann Friðriksson <Johann.Fridriksson@silabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
rich = "^12.0.0"
zeroconf = "^0.38.4"
requests = "^2.27.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
homeprovisioner = "homeprovisioner.main:main"
